@@ -1,0 +1,3 @@
+from txjsonrpc import meta
+
+print meta.version
